[tool.poetry]
name = "dlsubscanstakingrewardshistorydash"
version = "0.1.0"
description = "This is the Dash App version of dlSubscanStakingRewardsHistory."
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.7.1"
pandas = "^1.5.2"
requests = "^2.28.1"
configparser = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
