[tool.poetry]
name = "dlsubscanstakingrewardshistorydash"
version = "0.2.9"
description = "Web app to retrieve staking reward history using Dash / Plotly and SubscanAPI."
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.7.1"
requests = "^2.28.1"
tomlkit = "^0.11.6"
pandas = "^2.1.3"
pyarrow = "^15.0.0"
dash-bootstrap-components = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8-pyproject = "^1.2.3"
types-requests = "^2.28.11.16"
types-toml = "^0.10.8.5"
pytest-cov = "^4.0.0"
pre-commit = "^3.3.3"
taskipy = "^1.11.0"
ruff = "^0.0.275"
tk = "^0.1.0"

[tool.taskipy.tasks]
isort = "poetry run isort app tests"
black = "poetry run black app tests"
flake8 = "poetry run flake8 app tests"
mypy = "poetry run mypy"
ruffch = "poetry run ruff app tests ci"
rufffix = "poetry run ruff app tests ci --fix"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E501","W503"]

[tool.ruff]
# Rules to check
select = ["E", "F", "I"]
# Error target to ignore
ignore = ["E402","E501"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Assume Python 3.10.
target-version = "py310"

[tool.mypy]
files = ["app","tests"]
python_version = "3.10"
#no_strict_optional = true
strict_optional = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
